--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -1,6 +1,12 @@
-#root {
-  max-width: 1280px;
+.layout-container {
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: 1350px;
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 2.5rem;
+}
+
+.page-container {
+  max-width: 1050px;
+  padding: 1rem 2rem;
 }
