--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 1rem;
+  margin: 0.5rem 0 3rem 0;
 
   &__current-page {
     margin: 0 0.5rem;
@@ -14,18 +14,18 @@
   &__button {
     cursor: pointer;
     font-size: $font-size-body;
-    color: $color-white;
     background-color: $color-primary;
-    border: 1px solid $color-primary;
-
-    padding: 0.3rem 0.8rem;
+    color: $color-secondary;
+    border: none;
+    padding: 0.4rem 0.9rem;
+    border: 1px solid $color-red;
 
     border-radius: 0.5rem;
     transition: all 0.1s ease-in-out;
 
     &:hover {
-      color: $color-secondary;
-      background-color: $color-primary;
+      background-color: $color-secondary;
+      color: $color-primary;
     }
   }
 }
