--- a/src/components/fires.map/fires.map.scss
+++ b/src/components/fires.map/fires.map.scss
@@ -4,6 +4,7 @@
   min-height: 600px;
   position: relative;
   text-align: center;
+  margin-bottom: 3rem;
   &__google-map {
     width: 100%;
     height: 100%;
