--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,9 @@
 
 .header {
   background-color: $color-primary;
-  color: $color-white;
+  color: $color-secondary;
+  //sadow text
+  text-shadow: 0 0 2px $color-red;
 
   padding: 1rem;
 
